data/derived/comb/progs/unify/prog8478.ml.out
Characters 62-72:
  if b=b' then (b, false)
               ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
